# libdish

./: .gitignore  configure.ac
src/: Makefile.am  dish.c  dish.h
